Revise README to promote legal usage of Burp Suite
Removed instructions for bypassing licensing and software piracy. Updated README to focus on legitimate installation and usage of Burp Suite.